--- a/drupal/sites/all/themes/nurani/scss/_forms.scss
+++ b/drupal/sites/all/themes/nurani/scss/_forms.scss
@@ -95,7 +95,7 @@ input.date-clear{
        margin-right: 1.69492%;
        display: inline;
 
-       .fieldset-title{
+       .fieldset-legend{
           @include bundle-typography-regular;
           font-size: 2.1429em;
           text-decoration:none;
